Fix count position in artist and work listing
problem occured when title was too long to fit in single line.

fix extra class in less.

--- a/src/less/components/song/play_queue_info.less
+++ b/src/less/components/song/play_queue_info.less
@@ -24,7 +24,7 @@
         width: @listing-entry-height;
         font-size: 0.85em;
 
-        .played, .queueing, .played {
+        .played, .queueing {
             font-size: 0.6em !important;
         }
     });
